# slepc-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: ex01.rs  ex01_rusty.rs  ex03_rusty.rs
petsc-sys/: Cargo.toml  build.rs
petsc-sys/src/: lib.rs  main.rs
slepc-sys/: Cargo.toml  README  build.rs  slepc_wrapper.h  unused_build.rs
slepc-sys/c_test/: ex1  hello  hello.c  makefile
slepc-sys/src/: bindings.rs  lib.rs  main.rs  unused_full_bindings.rs
src/: eigensolver.rs  eps.rs  gnuplot.rs  gp.rs  ksp.rs  lib.rs  linear_system.rs  main.rs  mat.rs  matrix.rs  matrix_shell.rs  options.rs  pc.rs  plot.rs  precondition.rs  preconditioner.rs  spectral_transform.rs  st.rs  vec.rs  vector.rs  viewer.rs  world.rs
src/petsc_sys/: mod.rs  petsc_wrapper.h
src/slepc_sys/: mod.rs
