[package]
name = "slepc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slepc-sys = { path = "./slepc-sys" }
gnuplot = { version = "0.0.37", optional = true }

[features]
default = ["with_gnuplot"]
with_gnuplot = ["gnuplot"]