[package]
name = "slepc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slepc-sys = { path = "./slepc-sys" }
gnuplot_crate = { package = "gnuplot", version = "0.0.37", optional = true }
ndarray_crate = { package = "ndarray", version = "0.15", optional = true }
num-complex = "0.4"

[features]
default = ["gnuplot", "ndarray"]
gnuplot = ["gnuplot_crate"]
ndarray = ["ndarray_crate"]
scalar_complex = ["slepc-sys/scalar_complex"]
